5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1407/executions/1573_1330.log
== SUBMITION (2019-03-13 14:09:35) 
-- CODE:
print(250 / 6)
-- EXECUTION TIME:
0.213099
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:09:58) 
-- CODE:
round(print(250 / 6),2)
-- EXECUTION TIME:
0.187284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 1, in <module>
    round(print(250 / 6),2)
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:11:51) 
-- CODE:
resultado = 250 / 6
print(round(resultado, 2))
-- EXECUTION TIME:
0.171217
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:03) 
-- CODE:
resultad
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    resultad
NameError: name 'resultad' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:18:06) 
-- CODE:
resultado = 250 / 6
print(round(resultado, 2))
-- EXECUTION TIME:
0.185504
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:08) 
-- CODE:
resultado = 250 / 6
print(round(resultado, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
